# irl

./: .gitignore  .jekyll-metadata  CMakeLists.txt  CMakeLists.txt~  CREATE_A_POST.md  README.md  Simon_Interface.py  _config.yml  index.md  install_edwin.md  package.xml  params.json  projects.html  pushcup.md  readme.md  scrapeDataset.py  stereo_vis.md  troubleshooting.md  yolo.py
_includes/: page-footer.html  page-header.html
_layouts/: template.html
_posts/: README_TEMPLATE.md  sample-content.md
_posts/archive/: 2018-03-04-install_edwin.md  2018-03-04-pushcup.md  2018-03-04-stereo_vis.md  2018-03-04-troubleshooting.md
_site/: index.html  projects.html
_site/archives/: stereo_vis.html
_site/css/: cayman.css
bags/: .~lock.file.csv#  2017-03-10-18-11-42.bag  clap.bag  l_hand_head.csv  l_hand_r_hand.csv  l_hand_r_shoulder.bag  l_hand_r_shoulder.csv  l_hand_stomach.bag  l_hand_stomach.csv  left_hand_to_head.bag  r_hand_head.csv  r_hand_l_shoulder.bag  r_hand_l_shoulder.csv  r_hand_stomach.bag  r_hand_stomach.csv  right_hand_to_head.bag  trial.bag
button_game/Tests/: button_tracker.py
cad/: Edwin_Assembly.SLDASM  Edwin_Bottom.SLDPRT  Edwin_MainGear.SLDPRT  Edwin_MotorGear.SLDPRT  Edwin_Pin.SLDPRT  Edwin_Top.SLDPRT  Gear pin.SLDPRT  Marker_grabber.SLDPRT  ModularPenTest.SLDASM  Modular_pen_holder.SLDPRT  Motor Converter.SLDPRT  MotorModel.SLDPRT  Pen_finger.SLDPRT  README.md  eyeball.SLDPRT  eyegear.SLDPRT
css/: cayman.css
dino_arms/: CMakeLists.txt  package.xml
dino_arms/msg/: Cube_Structures.msg  Structure.msg  blocks.msg  structure.msg
dino_arms/params/: behaviors.txt  routes.txt
dino_arms/projects/: .gitignore  brain_F17.py  idle.py  opencv_test.py
dino_arms/projects/Connect4/: deep_thought_reinforce.py  game_board.py  jobs_test.py  memory.txt  minimax.py  (+4 more)
docs/: README.md
edwin_legacy/_oldInteractions/: ObjectFind.py  Simon_Says_practice.py
edwin_legacy/visual_menu/: visualmenu.py
edwin_moveit_config/: CMakeLists.txt  README.md  edwin_arm_group_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
edwin_moveit_config/config/: control.yaml  grasp_data.yaml  ompl_planning.yaml
edwin_moveit_config/include/: edwin_interface.h  utils.h
edwin_moveit_config/launch/: hardware.launch  move_group.launch  moveit_kinect.rviz  real.launch
edwin_moveit_config/scripts/: action_client.py
edwin_moveit_config/src/: .ycm_extra_conf.py  edwin_interface.cpp  utils.cpp
features/actuation/: create_routes.py  st.py
features/edwin_moveit_config/: CMakeLists.txt  package.xml
features/edwin_moveit_config/config/: control.yaml  fake_controllers.yaml  joint_limits.yaml
features/edwin_moveit_config/include/: edwin_interface.h  st_arm.h
features/edwin_moveit_config/launch/: fake_moveit_controller_manager.launch.xml
irl_collab/: .gitignore  CMakeLists.txt  package.xml
irl_features/edwin_description/: package.xml
irl_features/edwin_moveit_config/: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml
irl_install/: install-deps.sh  install.sh
irl_stereo/: package.xml
irl_stereo/launch/: demo.launch  stereo.launch
irl_stereo/src/: main.cpp
launch/: robot.launch  robot_math.launch  robot_minimal.launch  robot_sight.launch
msg/: Edwin_Shape.msg  HHH.msg
new_bags/: bow1_k.bag  bow1_y.bag  bow2_k.bag  bow2_y.bag  dab_k.bag  dab_y.bag  dicso1_y.bag  disco1_k.bag  disco2_k.bag  disco2_y.bag  heart_k.bag  heart_y.bag  high_five_k.bag  high_five_y.bag  hug_k.bag  hug_y.bag  rub_tummy_k.bag  rub_tummy_y.bag  star_k.bag  star_y.bag  touch_hand_y.bag  touch_head_k.bag  wave_k.bag  wave_y.bag
params/: behaviors.txt  cheeks.pkl  eyes.pkl  forehead.pkl  mouth.pkl  nose.pkl  routes.txt  simon.dict  stt_keywords.txt  svm_alphadata.npz  svm_data.npz  svm_numdata.npz
scripts/: .~lock.skeleton.csv#  PresenceDemo.py  SimonSays.py  WritingDemo.py  arm_node.py  arm_node_Kevin.py  brain.py  cup_finder.py  cv_test.py  demo_path.py  edwin_char_v1.py  edwin_char_v2.py  edwin_characterization.py  file.csv  gtk_speech.py  image_converter.py  knn.py  neato_controller.py  speech_test.py  sphinx_demo.py  st.py  st_test.py  test_arm_pub.py  test_slider.py  visualmenu.py
scripts/Interactions/: NewBrain.py  PlayPushCup.py  SimonSays.py  Simon_Interface.py  Simon_Says_practice.py  idle.py  srv_test.py  test.py  test_simon.py  tester.py  visualmenu.py
scripts/InteractiveDemos/: PushCup.py  SimonSays.py  TicTacToe.py  roslib
scripts/misc/: arm_node_old.py
scripts/motion/: ar_transform.py  arm_behaviors.py  arm_draw.py  arm_node.py  arm_node_Kevin.py  arm_write.py  create_routes.py  draw.py  draw_shapes.py  idle.py  st.py  storage.txt  test_arm_pub.py  test_draw_pub.py  ur5_arm_node.py
scripts/sight/: ColorTrackingTutorial.py  FACS_detect.py  FieldScanTest  FieldScanTest.py  TicTacToe.py  build_test_data.py  dlib_ex.py  dlib_features.py  ex.py  face_detect_pub.py  face_tracking.py  facial_emotion_recognition.py  facial_expression_learning.py  frames.gv  get_features_face.py  grid_detect.py  hand_detect.py  handwriting_recognition.py  img_processing.py  k-means.py  k_means.py  math_interp.py  nose.pkl  output.txt  partest.py  presence_detection.py  rospy  shape_detection.py  skeleton.py  skeleton_characterization.py  test.py  test_system_eqns.py  testing.py  tictactoe.py  watershed.py  wave_demo.py
scripts/sound/: Amplitude_based_localization.py  EdwinAudio.py  Edwin_Audio_Analysis.py  EmotionParse.py  EmotionParse_sophie.py  Stt Todo  alter  edwin_audio.py  edwin_soundboard.py  final_form  parallelMic.py  soundboard.py  stt.py  stt_engine.py  stt_example.py  stt_simon.py  testspeak.py  utterance_stt_test.py  volume_shift
scripts/test/: Image  arm_node.py  brain.py  cup_finder.py  cv_test.py  neato_controller.py  speech_test.py  st.py  test_arm_pub.py  test_draw_pub.py
scripts/test_scripts/: test_arm_pub.py  test_draw_pub.py
src/HeadControl/: HeadControl.ino
src/SceneAnalysis/: SceneDrawer.cpp  SceneDrawer.h  main.cpp
src/SingleControl/: main.cpp
src/accelerometer/: accelerometer.ino
src/sight/: face_tracking.cpp
(+303 files in other folders)
