<?xml version="1.0"?>
<package>
    <name>irl</name>
    <version>0.0.0</version>
    <description>Metapackage for IRL (Edwin)</description>
    <maintainer email="kevin.zhang@students.olin.edu">Kevin</maintainer>
    <license>MIT</license>
    <author email="yoonyoung.cho@students.olin.edu">Jamie Cho</author>
    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <!-- The export tag contains other, unspecified, tags -->
    <buildtool_depend>catkin</buildtool_depend>
    <export>
        <metapackage/>
    </export>
</package>
